--- a/holygrail.html
+++ b/holygrail.html
@@ -19,15 +19,16 @@
     <main>
         <section>
             <article>
-                <h2>The First Article</h2>
+                <h2>About Steve K. Mutombo</h2>
                 <p> I'm incredibly interested in technology and how it affects our world today. I chose to specialize in finances and information systems in the Master of Public Administration program at Brigham Young University because of my experience in people and operations management, as well as my desire to having a long-lasting beneficial impact on both individuals and organizations. The MPA program has equipped me with hands-on experiences in program evaluation, budgeting and forecasting, organizational behavior, quantitative decision analysis, business communication, and advanced data analytics using spreadsheet features, R Studio, Python, and Tableau. 
                 </p></article>
                </section>
         <section>
             <article>
-                <h2>The Second Article</h2>
-                <p> I'm incredibly interested in technology and how it affects our world today. I chose to specialize in finances and information systems in the Master of Public Administration program at Brigham Young University because of my experience in people and operations management, as well as my desire to having a long-lasting beneficial impact on both individuals and organizations. The MPA program has equipped me with hands-on experiences in program evaluation, budgeting and forecasting, organizational behavior, quantitative decision analysis, business communication, and advanced data analytics using spreadsheet features, R Studio, Python, and Tableau. 
-                </p></article>
+                <h2>About his Stake in Arizona</h2>
+                <p> Come feel belonging as you worship with your new church family. We’ll help you know what to expect at The Church of Jesus Christ of Latter-day Saints. Then we’ll be at the door to greet you and sit with you on Sunday! 
+                </p>
+            </article>
             
         </section>
         <aside>
