--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content ="This website present Steve Kapila Mutombo, a student at BYU-Idaha serviced through BYU-Pathway">
+        <meta name ="Steve Mutombo" content = "Steve Kapila">
         <title>Steve Mutombo | WDD 130</title>
+        <link rel="stylesheet" href="styles/style.css">
+
     </head>
 <body>
     <header>
@@ -20,6 +24,11 @@
 
             I'm Fluent in English, French, and Swahili - DR Congo.</p>
     </main>
+    <aside>
+        <h2>Arizona</h2>
+        <img src="images/arizona.jpeg" alt="Arizona" width="200">
+        <p>Arizona is the sixth largest state in the United States, and is bordered by California and Nevada to the west, Utah to the north, New Mexico to the east, and Mexico to the south. Arizona was part of Spanish and Mexican territories, and ceded the land to the United States in 1848. It became a separate territory in 1863, and officially became a state in 1912.</p>
+    </aside>
     <footer>
         <p> ©️️2024 | Steve Mutombo | Lubumbashi Democratic Republic of the Congo </p>
     </footer>
