--- a/week02/wrr/site-plan-rafting.html
+++ b/week02/wrr/site-plan-rafting.html
@@ -27,17 +27,20 @@
         <img src="images/wwr_image.png" alt="Rafting Site Logo" width="200">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
-        <a href="https://coolors.co/9b5de5-f15bb5-fee440-00bbf9-00f5d4" target="_blank">https://coolors.co/9b5de5-f15bb5-fee440-00bbf9-00f5d4</a>
+        <a href="https://coolors.co/1f2041-4b3f72-ffc857-119da4-19647e" target="_blank">https://coolors.co/1f2041-4b3f72-ffc857-119da4-19647e</a>
         <p> Elements
             <ol>
-                <li>00BBF9</li>
-                <li>FEE440</li>
-                <li>F15BB5</li>
+                <li>119DA4</li>
+                <li>19647E</li>
+                <li>FFC857</li>
+                <li>4B3F72</li>
+                <li>1F2041</li>
             </ol>
         </p>
         <h3> Typography</h3>
             <p><ol>
                 <li>Bitter</li>
+                <li>Open Sans</li>
             </ol>
             </p> 
         <h4>Headings Example Font</h4>
