--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 <body>
     <header>
         <nav>
-            <a href="https://www.linkedin.com/in/stevekapila/">Home</a>
-            <a href="https://www.mercer.com/en-us/">My Compamy</a> 
-            <a href="https://www.thelordshands.org">Our Nonprofit</a>
+            <a href="https://www.linkedin.com/in/stevekapila/">LinkedIn</a>
+            <a href="https://www.facebook.com/">Facebook</a> 
         </nav>
     </header>
     <main>
         <h1>Steve Mutombo WDD130</h1>
-        <img src="images/profile.jpg" alt="Steve Mutombo" width="200" />
+        <img src="images/profile.jpg" alt="Steve Mutombo" width="140" />
         <p> I'm incredibly interested in technology and how it affects our world today. I chose to specialize in finances and information systems in the Master of Public Administration program at Brigham Young University because of my experience in people and operations management, as well as my desire to having a long-lasting beneficial impact on both individuals and organizations. The MPA program has equipped me with hands-on experiences in program evaluation, budgeting and forecasting, organizational behavior, quantitative decision analysis, business communication, and advanced data analytics using spreadsheet features, R Studio, Python, and Tableau. 
 
             I'm Fluent in English, French, and Swahili - DR Congo.</p>
-    </main>
-    <aside>
+    <ul class="box">
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/kinshasa-democratic-republic-of-the-congo-temple?lang=fra" target="_blank">DR Congo Kinshasa Temple</a></li>
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/gilbert-arizona-temple?lang=fra"target="blank" >Gilbert Arizona Temple </a></li>
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/mesa-arizona-temple?lang=fra" target="_blank"> Mesa Arizona Temple </a></li>
+    </ul>
+        </main>
+    <aside class="box">
         <h2>Arizona</h2>
         <img src="images/arizona.jpeg" alt="Arizona" width="200">
         <p>Arizona is the sixth largest state in the United States, and is bordered by California and Nevada to the west, Utah to the north, New Mexico to the east, and Mexico to the south. Arizona was part of Spanish and Mexican territories, and ceded the land to the United States in 1848. It became a separate territory in 1863, and officially became a state in 1912.</p>
@@ -33,4 +37,7 @@
         <p> ©️️2024 | Steve Mutombo | Lubumbashi Democratic Republic of the Congo </p>
     </footer>
 </body>
+<!-- Today's date is May 9th 2024 -->
+
+
 </html>
