--- a/wdd130/wwr/about.html
+++ b/wdd130/wwr/about.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project">
+        <meta name="description" content ="About Heaven Rafting ">
         <meta name ="Author" content = "Steve Kapila">
         <title>About the Rafting Site</title>
         <link rel="stylesheet" href="styles/rafting.css">
@@ -14,9 +14,9 @@
     <img src="images/wwr_image.png" alt="Rafting Site Logo" width="100">
     <nav>
         <a href="https://kstevem.github.io/wdd130/wwr/site-plan-rafting.html" target="_blank">index.html</a>
-        <a href="#" target="_blank">about.html</a>
-        <a href="#" target="_blank">trips.html</a>
-        <a href="#" target="_blank">contact.html</a>
+        <a href="about.html" target="_blank">about.html</a>
+        <a href="trips.html" target="_blank">trips.html</a>
+        <a href="contact.html" target="_blank">contact.html</a>
 
     </nav>
 </header>
@@ -24,7 +24,7 @@
 <main>
     <div class="hero">
         <h1>Heaven Water Rafting</h1>
-        <img src="images/hero.webp" alt="hero" width="100%" height="300">
+        <img src="images/hero.webp" alt="hero" width="100" height="300">
             <article>
                 <img src="images/happyclient.jpeg" alt="Happy Employee" width="100"> 
                 <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
@@ -60,7 +60,7 @@
             </figure>
     </section>
         
-    <<main>
+</main>
     <footer>
         <p> ©2024 | Rafting Company | Steve Mutombo </p>
         <nav class="sociallinks">
