--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,7 +50,7 @@
             <img src="images/rafting3.jpeg" alt="Happy Employee" width="200"> <br>
             <figcaption>Heaven Rafting Group 3</figcaption>
             </figure>
-        <figure>
+        <figure>ß
             <img src="images/rafting4.jpeg" alt="Happy Employee" width="200"> <br>
             <figcaption>Heaven Rafting Group 4</figcaption>
             </figure>
