--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
 <main>
     <div class="hero">
         <h1>Heaven Water Rafting</h1>
-        <img src="images/hero.webp" alt="hero" width="100" height="300">
+        <img src="images/hero.webp" alt="hero" width="100%" height="300">
             <article>
                 <img src="images/happyclient.jpeg" alt="Happy Employee" width="100"> 
                 <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
@@ -50,7 +50,7 @@
             <img src="images/rafting3.jpeg" alt="Happy Employee" width="200"> <br>
             <figcaption>Heaven Rafting Group 3</figcaption>
             </figure>
-        <figure>ß
+        <figure>
             <img src="images/rafting4.jpeg" alt="Happy Employee" width="200"> <br>
             <figcaption>Heaven Rafting Group 4</figcaption>
             </figure>
