--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://www.facebook.com/">Facebook</a> 
         </nav>
     </header>
+<div class="grid">
     <main>
         <h1>Steve Mutombo WDD130</h1>
         <img src="images/profile.jpg" alt="Steve Mutombo" width="140" />
@@ -27,11 +28,12 @@
         <li> <a href="https://www.churchofjesuschrist.org/temples/details/gilbert-arizona-temple?lang=fra"target="blank" >Gilbert Arizona Temple </a></li>
         <li> <a href="https://www.churchofjesuschrist.org/temples/details/mesa-arizona-temple?lang=fra" target="_blank"> Mesa Arizona Temple </a></li>
     </ul>
-        </main>
+    </main>
     <aside class="box">
         <img src="images/arizona.jpeg" alt="Arizona" width="200">
         <p>Arizona is the sixth largest state in the United States, and is bordered by California and Nevada to the west, Utah to the north, New Mexico to the east, and Mexico to the south. Arizona was part of Spanish and Mexican territories, and ceded the land to the United States in 1848. It became a separate territory in 1863, and officially became a state in 1912.</p>
     </aside>
+</div>
     <footer>
         <p> ©️️2024 | Steve Mutombo | Lubumbashi Democratic Republic of the Congo </p>
     </footer>
