--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content ="This website present Steve Kapila Mutombo, a student at BYU-Idaha serviced through BYU-Pathway">
         <meta name="Steve Mutombo" content = "Steve Kapila">
-        <meta description="Steve Mutombo" content="Steve Kapila">
-        <meta author= "Steve Kapila Mutombo" content="Steve Kapila">
+        <meta name= "keywords" content="Steve Kapila">
+        <meta name="Author" content="Steve Kapila">
         <title>Steve Mutombo | WDD130</title>
         <link rel="stylesheet" href="styles/style.css">
 
