--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="This website present Steve Kapila Mutombo, a student at BYU-Idaha serviced through BYU-Pathway">
-        <meta name="Author" content="Steve Kapila">
+        <meta name="description" content ="This website present Steve Kapila Mutombo, and his passion for WDD130, the purpose of the page is to help you undestand his passion for web development" >
+        <meta name="author" content="Steve Kapila">
         <title>Steve Mutombo | WDD130</title>
         <link rel="stylesheet" href="styles/style.css">
 
@@ -27,7 +27,7 @@
     
     <main>
         <h1>Steve Mutombo | WDD130</h1>
-        <img src="images/profile.jpg" alt="Steve Mutombo" width="140"/>
+        <img src="images/profile.jpg" alt="Steve Mutombo" width="140">
         <p> I'm incredibly interested in technology and how it affects our world today. I chose to specialize in finances and information systems in the Master of Public Administration program at Brigham Young University because of my experience in people and operations management, as well as my desire to having a long-lasting beneficial impact on both individuals and organizations. The MPA program has equipped me with hands-on experiences in program evaluation, budgeting and forecasting, organizational behavior, quantitative decision analysis, business communication, and advanced data analytics using spreadsheet features, R Studio, Python, and Tableau. 
 
             I'm Fluent in English, French, and Swahili - DR Congo.</p>
