--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content ="This website present Steve Kapila Mutombo, and his passion for WDD130, the purpose of the page is to help you undestand his passion for web development" >
-        <meta name="author" content="Steve Kapila">
+        <meta name="author" content="Steve Kapila Mutombo">
         <title>Steve Mutombo | WDD130</title>
         <link rel="stylesheet" href="styles/style.css">
+
 
     </head>
 <body>
