--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="Welcome at our site. The main purpose of the site is to show you all the good things and majestic views and amenities we offer that Heaven Rafting offers">
-        <meta name ="Author" content = "Steve Kapila WDD130">
-        <title>About US at Heaven Rafting Company</title>
+        <meta name="description" content ="Experience the thrill of Heaven Water Rafting! Join us for unforgettable river adventures, guided by experts. Book your rafting trip today and enjoy nature's beauty. Welcome at our site. The main purpose of the site is to show you all the good things and majestic views and amenities we offer that Heaven Rafting offers">
+        <meta name ="Author" content = "Heaven Water Rafting Company by Steve Kapila WDD130">
+        <title>Heaven Water Rafting - Unforgettable River Adventures. Learn about US at Heaven Rafting Company</title>
         <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
@@ -21,6 +21,7 @@
 </header>
 
 <main>
+    <section>
     <div class="hero">
         <h1>Heaven Water Rafting</h1>
         <img src="images/zelo.jpeg" alt="hero" width="100%" height="300">
@@ -28,7 +29,9 @@
             <img src="images/happyclient.jpeg" alt="Happy Employee" width="100"> 
             <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
         </article>
-        </div>
+    </div>
+    </section>
+
     <div class="History">
 
             <h2>History</h2>
@@ -37,7 +40,7 @@
             <p> In the 1950s, Rockefeller used surplus military rafts to offer float trips at his Jackson Lake Lodge in Grand Teton National Park. The first year, fewer than 500 people went on the trips, but demand increased. This attraction was initially considered a failure, but it reflected growing interest in rafting, which led to the continued development of the sport as a commercial attraction.</p>
 
     </div>
-
+    <section>
     <div class=Adventures>
         <h2>Adventure Awaits You</h2>
         <figure>
@@ -60,7 +63,8 @@
             <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
             <figcaption>Location 5</figcaption>
             </figure>
-    </div>     
+    </div>  
+    </section>   
 </main>
     <footer>
         <p> ©2024 | Rafting Company | Steve Mutombo </p>
