--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,9 +3,9 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="Experience the thrill of Heaven Water Rafting! Join us for unforgettable river adventures, guided by experts. Book your rafting trip today and enjoy nature's beauty. Welcome at our site. The main purpose of the site is to show you all the good things and majestic views and amenities we offer that Heaven Rafting offers">
+        <meta name="description" content ="Experience the thrill of Heaven Water Rafting Company Name! Join us for unforgettable river adventures, guided by experts. Book your rafting trip today and enjoy nature's beauty. Welcome at our site. The main purpose of the site is to show you all the good things and majestic views and amenities we offer that Heaven Rafting offers. Learn more About US">
         <meta name ="Author" content = "Heaven Water Rafting Company by Steve Kapila WDD130">
-        <title>Heaven Water Rafting - Unforgettable River Adventures. Learn about US at Heaven Rafting Company</title>
+        <title>Rafting Company Name Heaven Water Rafting - Unforgettable River Adventures. Learn About US at Heaven Rafting Company</title>
         <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
