--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,6 +27,7 @@
         <img src="images/zelo.jpeg" alt="hero" width="100%" height="300">
         <article>
             <img src="images/happyclient.jpeg" alt="Happy Employee" width="100"> 
+            <h2>Heaven Water Rafting</h2>
             <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
         </article>
     </div>
