--- a/wdd130/wwr/about.html
+++ b/wdd130/wwr/about.html
@@ -3,64 +3,71 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="About Heaven Rafting ">
-        <meta name ="Author" content = "Steve Kapila">
-        <title>About the Rafting Site</title>
+        <meta name="description" content ="Experience the thrill of Heaven Rafting Company Name! Join us for unforgettable river adventures, guided by experts. Book your rafting trip today and enjoy nature's beauty. Welcome at our site. The main purpose of the site is to show you all the good things and majestic views and amenities we offer that Heaven Rafting offers. Learn more About US">
+        <meta name ="Author" content = "Heaven Water Rafting Company by Steve Kapila WDD130">
+        <title>Rafting Company Name About Us Heaven Rafting Company About US - Unforgettable River Adventures. Learn About US at Heaven Rafting Company</title>
         <link rel="stylesheet" href="styles/rafting.css">
 
-</head>
-<body>
-<header>
-    <img src="images/wwr_image.png" alt="Rafting Site Logo" width="100">
-    <nav>
-        <a href="https://kstevem.github.io/wdd130/wwr/site-plan-rafting.html" target="_blank">index.html</a>
-        <a href="about.html" target="_blank">about.html</a>
-        <a href="trips.html" target="_blank">trips.html</a>
-        <a href="contact.html" target="_blank">contact.html</a>
+    </head>
+    <body>
+        <header>
+        <img src="images/wwr_image.png" alt="Rafting Site Logo" width="100">
+        <nav>
+            <a href="https://kstevem.github.io/wdd130/wwr/site-plan-rafting.html" target="_blank">Index.html</a>
+            <a href="about.html" target="_blank">About.html</a>
+            <a href="trips.html" target="_blank">Trips.html</a>
+            <a href="contact.html" target="_blank">Contact.html</a>
+        </nav>
+        </header>
 
-    </nav>
-</header>
-
-<main>
-    <div class="hero">
-        <h1>Heaven Water Rafting</h1>
-        <img src="images/hero.webp" alt="hero" width="100%" height="300">
+        <main>
+        <section>
+        <div class="hero">
+            <h1>Heaven Water Rafting</h1>
+            <img src="images/zelo.jpeg" alt="hero" width="100%" height="300">
             <article>
                 <img src="images/happyclient.jpeg" alt="Happy Employee" width="100"> 
+                <h2>Heaven Water Rafting</h2>
                 <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
             </article>
         </div>
+        </section>
 
-    <section>
+        <div class="History">
+
             <h2>History</h2>
             <p>In the 1950s, Rockefeller used surplus military rafts to offer float trips at his Jackson Lake Lodge in Grand Teton National Park. The first year, fewer than 500 people went on the trips, but demand increased. This attraction was initially considered a failure, but it reflected growing interest in rafting, which led to the continued development of the sport as a commercial attraction.</p> 
-    </section>
+            <img src="images/rafting1.jpeg" alt="Happy Employee" width="150">
+            <p> In the 1950s, Rockefeller used surplus military rafts to offer float trips at his Jackson Lake Lodge in Grand Teton National Park. The first year, fewer than 500 people went on the trips, but demand increased. This attraction was initially considered a failure, but it reflected growing interest in rafting, which led to the continued development of the sport as a commercial attraction.</p>
 
-    <section>
-        <h2>Adventure Awaits You</h2>
-        <figure>
-        <img src="images/rafting1.jpeg" alt="Happy Employee" width="200"> <br>
-        <figcaption>Heaven Rafting Group 1</figcaption>
-        </figure>
-        <figure>
-            <img src="images/rafting2.jpeg" alt="Happy Employee" width="200"> <br>
-            <figcaption>Heaven Rafting Group 2</figcaption>
+         </div>
+
+        <section>
+        <div class=Adventures>
+            <h2>Adventure Awaits You</h2>
+            <figure>
+                <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
+            <figcaption>Location 1</figcaption>
+            </figure>
+             <figure>
+            <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
+            <figcaption>Location 2</figcaption>
             </figure> 
-        <figure>
-            <img src="images/rafting3.jpeg" alt="Happy Employee" width="200"> <br>
-            <figcaption>Heaven Rafting Group 3</figcaption>
+            <figure>
+            <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
+            <figcaption>Location 3</figcaption>
             </figure>
-        <figure>
-            <img src="images/rafting4.jpeg" alt="Happy Employee" width="200"> <br>
-            <figcaption>Heaven Rafting Group 4</figcaption>
+            <figure>
+            <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
+            <figcaption>Location 4</figcaption>
             </figure>
-        <figure>
-            <img src="images/rafting5.jpeg" alt="Happy Employee" width="200"> <br>
-            <figcaption>Heaven Rafting Group 5</figcaption>
+            <figure>
+            <img src="images/rafting1.jpeg" alt="Happy Employee" width="150"> <br>
+            <figcaption>Location 5</figcaption>
             </figure>
-    </section>
-        
-</main>
+    </div>  
+    </section>   
+    </main>
     <footer>
         <p> ©2024 | Rafting Company | Steve Mutombo </p>
         <nav class="sociallinks">
@@ -75,5 +82,5 @@
             </a>
         </nav>
     </footer>
-</body>
+    </body>
 </html>
