--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="This website present Steve Kapila Mutombo, and his passion for WDD130, the purpose of the page is to help you undestand his passion for web development" >
+        <meta name="description" content ="This is an basic quiz intending to assess knowledge on HTML and CSS" >
         <meta name="author" content="Steve Kapila Mutombo">
         <title>WDD130 | HTML Online Quiz</title>
         <link rel="stylesheet" href="styles/quiz.css">
