--- a/quiz.html
+++ b/quiz.html
@@ -27,13 +27,13 @@
             <div class="form-item">
                 <div class="form-item column2">
                         <label for ="q2">Q2. How are id and class attributes selected in CSS?</label>
-                        <textarea id="q2" name="Q2" rows="4" placeholder=""></textarea>
+                        <textarea id="q2" name="q2" rows="4" placeholder=""></textarea>
                 </div> 
             </div>
             <div classs="form-item">
                 <div class="form-item column2">
                     <label for="q3">Q3. Which of the following is a valid CSS comment?</label>
-                    <select id="q3" name="Q3">
+                    <select id="q3" name="q3">
                         <option value ="" selected disabled>Choose One...</option>
                         <option value ="True">/* This is a valid CSS comment */</option>
                         <option value ="False">// This is not a valid CSS comment</option>
