--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,7 @@
 
 
     <footer>
-        <p> ©️️2024 | HTML Form - User Poll Activity | STEVE KAPILA MUTOMBO</p>
+        <p> ©️️2024 | HTML ONLNE QUIZ | STEVE KAPILA MUTOMBO</p>
     </footer>
 </body>
 <!-- Today's date is May 9th 2024 -->
