--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content ="Contact the Company Heaven Rafting Company This page serves as a contact point for visitors to ask questions about our services, and contact us for other various enquiries">
+        <meta name="description" content ="Heaven Rafting Company offers thrilling and safe white-water rafting experiences. Our professional guides ensure an unforgettable adventure on some of the most scenic rivers. We cater to all skill levels, from beginners to experienced rafters."Contact the Company Heaven Rafting Company This page serves as a contact point for visitors to ask questions about our services, and contact us for other various enquiries">
         <meta name ="Author" content = "Steve Kapila Mutombo">
         <title>Rafting Company Name Contact us page</title>
         <link rel="stylesheet" href="styles/rafting.css">
