--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -85,7 +85,7 @@
             <a href="https://instagram.com">
                 <img src="images/instagram.jpeg" alt="Instagram" width="25">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://github.com/kstevem/wdd130/blob/main/wwr/images/Trips%20Wireframe-2.jpeg">
                 <img src="images/Trips Wireframe-2.jpeg" alt="Wireframe" width="25">
             </a>
         </nav>
