--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <header>
-        <img src="images/wwr_image.png" alt="Rafting Site Logo" width="100">
+        <img src="images/loko.webp" alt="Rafting Site Logo" width="100">
         <nav>
-            <a href="https://kstevem.github.io/wdd130/wwr/site-plan-rafting.html" target="_blank">Index.html</a>
+            <a href="https://kstevem.github.io/wdd130/wwr/index.html" target="_blank">Index.html</a>
             <a href="about.html" target="_blank">About.html</a>
             <a href="trips.html" target="_blank">Trips.html</a>
             <a href="contact.html" target="_blank">Contact.html</a>
