--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
 
             <section>
                 <h1>Heaven Water Rafting</h1>
-                <div class="hero">
+                <div class="hero2">
                     
                     <article>
                     <p>Our mission is to have a positive impact on people's lives and our natural world by providing outstanding river trips and other outdoor adventure experiences. </p>
